--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "spatie/laravel-data": "*"
     },
     "require-dev": {
+        "brianium/paratest": "^7",
         "fakerphp/faker": "^1.23",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
