--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "guzzlehttp/guzzle": "^7.8",
         "laravel/framework": "^11.0 || ^12.0",
         "predis/predis": "^3.4",
-        "spatie/laravel-data": "*"
+        "spatie/laravel-data": "*",
+        "spatie/laravel-query-builder": "^6.4"
     },
     "require-dev": {
         "brianium/paratest": "^7",
